force-app/main/default/objects/Survey_Question__c/Survey_Question__c.object-meta.xml
<CustomObject>
    <description>Individual survey questions with configurable question types and validation rules (MOD-04 Outlet Visit Execution)</description>
    <label>Survey Question</label>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>