force-app/main/default/objects/Survey_Question__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <label>Options</label>
    <description>JSON formatted options for choice-based questions</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>