force-app/main/default/objects/Survey_Question__c/listViews/All_Survey_Questions.listView-meta.xml
<ListView>
    <fullName>All_Survey_Questions</fullName>
    <columns>NAME</columns>
    <columns>Survey__c</columns>
    <columns>Question_Text__c</columns>
    <columns>Question_Type__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Is_Required__c</columns>
    <columns>Options__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Survey Questions</label>
</ListView>